# WSN_simulator

./: README.md  mobility_tool_parameters_example.conf  mobility_tool_test_1.conf  mobility_tool_test_2.conf  mobility_tool_test_3.conf
WSN_mobility/: CMakeLists.txt  cevent_space.cpp  cevent_space.h  cfp_slider.cpp  cfp_slider.h  csim_run.cpp  csim_run.h  cslider.cpp  cslider.h  cstacked_widget.cpp  cstacked_widget.h  ikonok.qrc  main.cpp  mobility_interface.h  placement_interface.h  style.qss  widget.cpp  widget.h
WSN_mobility/plugins/: CMakeLists.txt
WSN_mobility/plugins/mobility/directed_multi_direction/: directed_multi_direction_mobility_plugin.cpp  directed_multi_direction_mobility_plugin.h
WSN_mobility/plugins/mobility/directed_unique_direction/: directed_unique_direction_mobility_plugin.cpp  directed_unique_direction_mobility_plugin.h
WSN_mobility/plugins/mobility/gauss_markov/: gauss_markov_mobility_plugin.cpp  gauss_markov_mobility_plugin.h
WSN_mobility/plugins/mobility/random_direction/: random_direction_mobility_plugin.cpp  random_direction_mobility_plugin.h
WSN_mobility/plugins/mobility/random_walk/: random_walk_mobility_plugin.cpp  random_walk_mobility_plugin.h
WSN_mobility/plugins/mobility/random_waypoint/: random_waypoint_mobility_plugin.cpp  random_waypoint_mobility_plugin.h
WSN_mobility/plugins/placement/poisson_disk_sampling/: poisson_disk_placement_plugin.cpp  poisson_disk_placement_plugin.h
the_simulation/: HPC_compile_all_things.bash  SMNone_NMNone_g0.1_NS1_NN120_P236.conf  SMNone_NMNone_g0.9_NS4_NN120_P108.conf  SMNone_NMNone_g0.9_NS4_NN120_P108.csv  conf2_gen.cpp  conf_default_parameters.txt  config_gen.cpp  config_gen_eles_2.cpp  config_gen_one.cpp  config_gen_teszt_3.cpp  debug.txt  eles1.job  eparams.h  main.cpp  main_compile_command.txt  mobility_conf_default_parameters.txt  mobility_plugin_tester.cpp  placement_function.h  plugin_compile_commands.txt  prod_csv_gen.cpp  run_multiple_cases.bash  run_usage.txt  simulation_program_structure.txt  test.conf  test.job  teszt_bin_file_kiir.cpp  teszt_csv_gen.cpp  teszt_placement.cpp  teszt_system.cpp
the_simulation/plugins/mobility/: mobility_interface.h
the_simulation/plugins/mobility/directed_multi_direction/: directed_multi_direction_mobility_plugin.cpp  directed_multi_direction_mobility_plugin.h
the_simulation/plugins/mobility/directed_unique_direction/: directed_unique_direction_mobility_plugin.cpp  directed_unique_direction_mobility_plugin.h
the_simulation/plugins/mobility/gauss_markov/: gauss_markov_mobility_plugin.cpp  gauss_markov_mobility_plugin.h
the_simulation/plugins/mobility/random_direction/: random_direction_mobility_plugin.cpp  random_direction_mobility_plugin.h
the_simulation/plugins/mobility/random_walk/: random_walk_mobility_plugin.cpp  random_walk_mobility_plugin.h
the_simulation/plugins/mobility/random_waypoint/: random_waypoint_mobility_plugin.cpp  random_waypoint_mobility_plugin.h
the_simulation/plugins/routing/: routing_interface.h
the_simulation/plugins/routing/dijkstra/: a.out  dijkstra_routing_plugin.cpp  dijkstra_routing_plugin.h  dijkstra_test.cpp  dijkstra_test_2.cpp  double_test.cpp
